# RustyLnk

./: Cargo.toml  README.md
.testdata/: 067.lnk  Copy of Metal Alloy List Research.lnk
examples/: lnk_example.rs  struct_examples.rs
src/: lib.rs  main.rs
src/lnkpkg/: datablocks.rs  errors.rs  flags.rs  lnk.rs  locationinfo.rs  mod.rs  netshareinfo.rs  utils.rs  volumeinfo.rs
tests/: link_tests.rs
