[package]
name = "RustyLnk"
version = "0.0.1"
authors = ["Matthew Seyer <https://github.com/forensicmatt>"]

[lib]
name = "rustylnk"
crate-type = ["cdylib","lib"]

[dependencies]
clap = "*"
bitflags = "*"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
seek_bufread = "~1.2"
byteorder = "1"
encoding = "0.2"
log = "0.3"
env_logger = "0.3"

[dependencies.jmespath]
version = "^0.1.1"

[dependencies.r-shellitems]
version = "0.0.4"
branch = "master"
git = "https://github.com/forensicmatt/r-shellitems"

[dependencies.r-winstructs]
version = "0.1.4"
branch = "master"
git = "https://github.com/forensicmatt/r-winstructs"
